add default theme

--- a/static/css/partial/_default-theme--variable.sass
+++ b/static/css/partial/_default-theme--variable.sass
@@ -2,24 +2,25 @@ body
   --font-family--default: 'InfinitySans'
   --font-family--icon: 'Font Awesome 5 Free'
 
-  --background-color--default: #fff
-  --background-color--nav: #000
-  --background-color--post-container: #ffffff
-  --background-color--file: #000
+  --background-color--default: #fffefd
+  --background-color--nav: #313131
+  --background-color--post-container: #fff
+  --background-color--file: #1f1f1f
   --background-color--blockquote: #fcfcfc
+  --background-color--stepper-title: #777
 
-  --font-color--default: #000
+  --font-color--default: #4a4a4a
   --font-color--nav-title: #fff
   --font-color--nav-category: #fffffff7
   --font-color--nav-profile-link: #fffaf5bd
-  --font-color--section-title: #000
-  --font-color--post-content: #000
+  --font-color--section-title: #4c4c4c
+  --font-color--post-content: #5a5a5a
 
-  --font-color--post-date: #000
-  --font-color--post-tag: #000
+  --font-color--post-date: #8e8e8e
+  --font-color--post-tag: #777777
   --font-color--post-category-badge: #fff
   --font-color--post-step-title: #fff
-  --font-color--post-info: #000
+  --font-color--post-info: #a2a2a2
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
@@ -27,4 +28,4 @@ body
   --padding--contents-wrapper-x: 3em
   --padding--contents-wrapper-y: 2em
 
-  --key-color--default: #000
+  --key-color--default: #524040
