add default theme

--- a/static/css/partial/_default-theme--variable.sass
+++ b/static/css/partial/_default-theme--variable.sass
@@ -2,7 +2,7 @@ body
   --font-family--default: 'InfinitySans'
   --font-family--icon: 'Font Awesome 5 Free'
 
-  --background-color--default: #fffefd
+  --background-color--default: #fdfdfd
   --background-color--nav: #313131
   --background-color--post-container: #fff
   --background-color--file: #1f1f1f
