--- a/static/css/partial/_default-theme--variable.sass
+++ b/static/css/partial/_default-theme--variable.sass
@@ -3,24 +3,24 @@ body
   --font-family--icon: 'Font Awesome 5 Free'
 
   --background-color--default: #fdfdfd
-  --background-color--nav: #313131
+  --background-color--nav: #1f1f1f
   --background-color--post-container: #fff
   --background-color--file: #1f1f1f
   --background-color--blockquote: #fcfcfc
-  --background-color--stepper-title: #777
+  --background-color--stepper-title: #510A32
 
-  --font-color--default: #4a4a4a
+  --font-color--default: #4a393f
   --font-color--nav-title: #fff
   --font-color--nav-category: #fffffff7
   --font-color--nav-profile-link: #fffaf5bd
-  --font-color--section-title: #4c4c4c
+  --font-color--section-title: #4e4246
   --font-color--post-content: #5a5a5a
 
-  --font-color--post-date: #8e8e8e
-  --font-color--post-tag: #777777
+  --font-color--post-date: #968f91
+  --font-color--post-tag: #7d7075
   --font-color--post-category-badge: #fff
   --font-color--post-step-title: #fff
-  --font-color--post-info: #a2a2a2
+  --font-color--post-info: #929191
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
@@ -28,4 +28,4 @@ body
   --padding--contents-wrapper-x: 3em
   --padding--contents-wrapper-y: 2em
 
-  --key-color--default: #524040
+  --key-color--default: #801336
