--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -5,6 +5,7 @@
 
 @import 'default-theme--variable';
 @import 'pink-theme--variable';
+@import 'blue-theme--variable';
 
 @import 'base';
 @import 'navigation-bar';
