--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -24,6 +24,9 @@ body
   .section-title
     color: var(--font-color--section-title)
 
+  .w-50
+    width: 50%!important
+
   .mt-1
     margin-top: 1em!important
 
@@ -44,6 +47,9 @@ body
 
   .mr-1
     margin-right: 1em!important
+
+  .ml-3
+    margin-left: 3em!important
 
   .pb-2
     padding-bottom: 2em!important
