--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -6,6 +6,9 @@
       text-align: left
       color: var(--font-color--post-content)
 
+      a
+        text-decoration: underline
+
     .thumbnail
       border-radius: 0
 
@@ -90,7 +93,6 @@
 
       a
         color: #2196f3
-        text-decoration: underline
         font-size: .9em
 
     &.text
