adjust post detail padding

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -108,6 +108,7 @@
       &.text
         .thumbnail
           width: 100%
+
       .contents-wrapper
-        padding: var(--padding--contents-wrapper-y) var(--padding--contents-wrapper-x)
+        padding: var(--padding--contents-wrapper-y) calc(var(--padding--contents-wrapper-x) / 2)
 
