adjust post detail padding

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -3,7 +3,8 @@
     text-align: center
 
     .contents-wrapper
-      padding: var(--padding--contents-wrapper-y) calc(var(--padding--contents-wrapper-x) * 5)
+      padding-left: calc(var(--padding--contents-wrapper-x) * 5)
+      padding-right: calc(var(--padding--contents-wrapper-x) * 5)
 
     .post-content
       text-align: left
@@ -110,5 +111,5 @@
           width: 100%
 
       .contents-wrapper
-        padding: var(--padding--contents-wrapper-y) calc(var(--padding--contents-wrapper-x) / 2)
-
+        padding-left: calc(var(--padding--contents-wrapper-x) / 2)
+        padding-right: calc(var(--padding--contents-wrapper-x) / 2)
