adjust post detail padding

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -3,8 +3,8 @@
     text-align: center
 
     .contents-wrapper
-      padding-left: calc(var(--padding--contents-wrapper-x) * 5)
-      padding-right: calc(var(--padding--contents-wrapper-x) * 5)
+      padding-left: 20%
+      padding-right: 20%
 
     .post-content
       text-align: left
