adjust grid column width

--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -15,7 +15,7 @@ body
 
   &.container
     display: grid
-    grid-template-columns: 18em auto
+    grid-template-columns: 18% auto
 
   .contents-wrapper
     overflow: scroll
