change post list layout

--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -8,6 +8,10 @@
       .post-container
         position: relative
 
+        .category-badge
+          display: table
+          margin-right: auto
+
         .additional-info-wrapper
           display: flex
           align-items: center
