--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -33,11 +33,11 @@
                 <ul class="post-container text">
                     {% for post in site.posts limit: 6 %}
                         <li>
+                            <p class="category-badge ma-0 mb-1">{{ post.categories | first | upcase }}</p>
                             <a href="{{ post.url }}" class="title">
-                                <span class="category-badge">{{ post.categories | first | upcase }}</span>
                                 {{ post.title }}
                             </a>
-                            <div class="mt-1">
+                            <div class="mt-3">
                                 {% for tag in post.tags limit: 4 %}
                                 <span class="tag"># {{ tag }} </span>
                                 {% endfor %}
