--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -14,10 +14,9 @@
                     {% for post in site.posts %}
                     <li>
                         <a href="{{ post.url }}" class="title">
-                            <span class="category-badge">{{ post.categories | first | upcase }}</span>
                             {{ post.title }}
                         </a>
-                        <div>
+                        <div class="mt-3">
                             {% for tag in post.tags limit: 4 %}
                             <span class="tag"># {{ tag }} </span>
                             {% endfor %}
