--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -27,6 +27,9 @@ body
   .w-50
     width: 50%!important
 
+  .ma-0
+    margin: 0!important
+
   .mt-1
     margin-top: 1em!important
 
@@ -41,6 +44,9 @@ body
 
   .mt-5
     margin-top: 5em!important
+
+  .mb-1
+    margin-bottom: 1em!important
 
   .mb-4
     margin-bottom: 4em!important
