change post list layout

--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -43,7 +43,7 @@
 
         &.text
           display: grid
-          grid-template-columns: 25% 25% 25% 25%
+          grid-template-columns: repeat(4, 1fr)
 
           li
             background: var(--background-color--post-container)
