change post list layout

--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -13,6 +13,9 @@
                 <ul class="post-container text">
                     {% for post in site.posts %}
                     <li>
+                        <div class="additional-info-wrapper">
+                            <p class="date ma-0 mb-1">{{ post.date | date: "%Y.%m.%d " }}</p>
+                        </div>
                         <a href="{{ post.url }}" class="title">
                             {{ post.title }}
                         </a>
