--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -20,7 +20,7 @@
                             {{ post.title }}
                         </a>
                         <div class="mt-3">
-                            {% for tag in post.tags limit: 4 %}
+                            {% for tag in post.tags %}
                             <span class="tag"># {{ tag }} </span>
                             {% endfor %}
                         </div>
