add overflow option

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -25,6 +25,7 @@
         border: 1px solid #eee
         padding: .5em 0
         color: #dadcf3
+        overflow: auto
 
       .language-yaml
         .na, .pi
@@ -47,6 +48,8 @@
         color: #d14
         font-size: .85em
         font-family: var(--font-family--default)
+
+
 
     .stepper
       .title
