--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -23,6 +23,10 @@
           &:before
             content: '\00B7'
 
+        .tag-container
+          display: flex
+          flex-wrap: wrap
+
         &.thumbnail
           background: var(--background-color--post-container)
           border: 1px solid var(--border-color--post-container)
@@ -52,6 +56,7 @@
             padding: 2em 1.5em
             margin-right: 1.5em
             margin-bottom: 1em
+            display: grid
 
             &:nth-child(4)
               margin-right: 0
