--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -10,6 +10,21 @@
       text-align: left
       color: var(--font-color--post-content)
 
+      h1
+        font-size: 1.5em
+
+      h2
+        font-size: 1.3em
+
+      h3
+        font-size: 1.1em
+
+      h4
+        font-size: 0.9em
+
+      h5
+        font-size: 0.8em
+
       a
         text-decoration: underline
 
