--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -28,6 +28,10 @@
       a
         text-decoration: underline
 
+      p
+        margin-block-start: .5em
+        margin-block-end: .5em
+
     .thumbnail
       border-radius: 0
 
