post content heading tag css

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -10,6 +10,9 @@
       text-align: left
       color: var(--font-color--post-content)
 
+      h1, h2, h3, h4, h5
+        margin-block-start: 3em
+
       h1
         font-size: 1.5em
 
