add google verification metadata

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,8 @@
     <link rel="manifest" href="/static/images/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c00">
     <meta name="theme-color" content="#FFFFFF">
+
+    <meta name="google-site-verification" content="e0ZWnkRm5aeF5hy4kOkDJfDZOC5Gmr5FYzgwyE2xN6k" />
     <link rel="shortcut icon" href="/static/images/favicon.ico">
 
 </head>
