--- a/static/css/partial/_blue-theme--variable.sass
+++ b/static/css/partial/_blue-theme--variable.sass
@@ -21,6 +21,7 @@ body.blue-theme
   --font-color--post-category-badge: #fff
   --font-color--post-step-title: #fff
   --font-color--post-info: #8d98b1
+  --font-color--post-warning: #b79735
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
