--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -101,6 +101,18 @@
           content: '\f15b'
           margin-right: .5em
 
+    .warning
+      font-size: .78em
+      color: var(--font-color--post-warning)
+
+      &:before
+        font-size: 1.3em
+        font-family: var(--font-family--icon)
+        content: '\f071'
+        margin-right: .5em
+        font-weight: 900
+        color: #f7c93f
+
     .info
       font-size: .78em
       color: var(--font-color--post-info)
