--- a/static/css/partial/_default-theme--variable.sass
+++ b/static/css/partial/_default-theme--variable.sass
@@ -21,6 +21,7 @@ body
   --font-color--post-category-badge: #fff
   --font-color--post-step-title: #fff
   --font-color--post-info: #9097a0
+  --font-color--post-warning: #b79735
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
