--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,14 @@
     <meta name="google-site-verification" content="e0ZWnkRm5aeF5hy4kOkDJfDZOC5Gmr5FYzgwyE2xN6k" />
     <link rel="shortcut icon" href="/static/images/favicon.ico">
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQ9TZ4W7KK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JQ9TZ4W7KK');
+    </script>
 </head>
