add padding left class

--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -57,6 +57,12 @@ body
   .ml-3
     margin-left: 3em!important
 
+  .pl-1
+    padding-left: 1em!important
+
+  .pl-2
+    padding-left: 2em!important
+
   .pb-2
     padding-bottom: 2em!important
 
