develop border style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -48,6 +48,7 @@
         padding: .5em 0
         color: #dadcf3
         overflow: auto
+        border-top-color: #ffffff00
 
       .language-yaml
         .na, .pi
@@ -94,7 +95,6 @@
         padding: .5em 1em
         border: 1px solid #eee
         border-bottom: none
-        margin-bottom: -1px
 
         &:before
           font-family: var(--font-family--icon)
