filename-badge change border margin

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -95,6 +95,7 @@
         padding: .5em 1em
         border: 1px solid #eee
         border-bottom: none
+        margin-bottom: -1px
 
         &:before
           font-family: var(--font-family--icon)
