--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,5 +1,7 @@
 <div class="navigation-bar default">
-    <section class="mt-3">
+    <a href="/search" class="icon search"></a>
+
+    <section class="mt-3 body">
         <h1 class="title">
             <a href="/">
                 {{ site.title }}
