--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -48,6 +48,9 @@ body
   .mb-1
     margin-bottom: 1em!important
 
+  .mb-2
+    margin-bottom: 2em!important
+
   .mb-4
     margin-bottom: 4em!important
 
@@ -86,12 +89,18 @@ body
         content: '\f09b'
 
     &.email
-      font-family: 'Font Awesome 5 Free'
+      font-family: var(--font-family--icon)
       font-weight: 900
 
       &:before
         content: '\f658'
 
+    &.search
+      font-family: var(--font-family--icon)
+      font-weight: 900
+
+      &:before
+        content: '\f002'
 
 @media screen and (max-width: 768px)
   body
