--- a/static/css/partial/_blue-theme--variable.sass
+++ b/static/css/partial/_blue-theme--variable.sass
@@ -12,7 +12,7 @@ body.blue-theme
   --font-color--default: #4e5665
   --font-color--nav-title: #fff
   --font-color--nav-category: #fffffff7
-  --font-color--nav-profile-link: #fffaf5bd
+  --font-color--nav-link: #fffaf5bd
   --font-color--section-title: #343840
   --font-color--post-content: #3F4756
 
@@ -22,6 +22,7 @@ body.blue-theme
   --font-color--post-step-title: #fff
   --font-color--post-info: #8d98b1
   --font-color--post-warning: #b79735
+  --font-color--post-count: #5889d4
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
