--- a/static/css/partial/_default-theme--variable.sass
+++ b/static/css/partial/_default-theme--variable.sass
@@ -12,7 +12,7 @@ body
   --font-color--default: #000
   --font-color--nav-title: #fff
   --font-color--nav-category: #fffffff7
-  --font-color--nav-profile-link: #fffaf5bd
+  --font-color--nav-link: #fffaf5bd
   --font-color--section-title: #3a4048
   --font-color--post-content: #4B4A54
 
@@ -22,6 +22,7 @@ body
   --font-color--post-step-title: #fff
   --font-color--post-info: #9097a0
   --font-color--post-warning: #b79735
+  --font-color--post-count: #5889d4
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
