--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -3,12 +3,22 @@
   font-weight: bold
   text-align: center
   padding: 0
+  position: relative
+
+  .search
+    position: absolute
+    top: 0
+    right: 0
+    color: var(--font-color--nav-link)
+    font-size: 1.4em
+    cursor: pointer
+    padding: .5em .8em
 
   section
     padding: 0 2em
     margin: 0
 
-    &:first-child
+    &.body
       height: 86vh
 
     &.footer
@@ -59,7 +69,7 @@
     a
       margin: 0 .5em
       .icon
-        color: var(--font-color--nav-profile-link)
+        color: var(--font-color--nav-link)
 
   &.mobile
     display: none
