--- a/static/css/partial/_pink-theme--variable.sass
+++ b/static/css/partial/_pink-theme--variable.sass
@@ -12,7 +12,7 @@ body.pink-theme
   --font-color--default: #384144
   --font-color--nav-title: #fff
   --font-color--nav-category: #fffffff7
-  --font-color--nav-profile-link: #fffaf5bd
+  --font-color--nav-link: #fffaf5bd
   --font-color--section-title: #485458
   --font-color--post-content: #485458
 
@@ -22,6 +22,7 @@ body.pink-theme
   --font-color--post-step-title: #fff
   --font-color--post-info: #a99e94
   --font-color--post-warning: #b79735
+  --font-color--post-count: #d08d77
 
   --border-color--thumbnail: #eee
   --border-color--post-container: #f5f5f5
