--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -95,7 +95,6 @@
 
         .title
           margin: 0
-          margin-left: 2em
 
         .btn-menu
           margin-right: .5em
@@ -108,10 +107,16 @@
 
       .category-container
         background: var(--background-color--default)
-        box-shadow: 0px 5px 5px #00000008
+        box-shadow: 0 5px 5px #00000008
         display: none
 
         a
           font-size: 1em
           color: var(--font-color--default)
           justify-content: left
+
+      .search
+        position: initial
+        padding: 0
+        margin-left: .8em
+        color: var(--font-color--nav-title)
