--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -39,7 +39,8 @@
 
 <div class="navigation-bar mobile">
     <div class="header">
-        <h5 class="title">
+        <a href="/search" class="icon search"></a>
+        <h5 class="title ml-2">
             <a href="/">
                 {{ site.title }}
             </a>
