--- a/static/css/partial/_search.sass
+++ b/static/css/partial/_search.sass
@@ -19,6 +19,9 @@
           border-right: none
           width: 100%
 
+          &::placeholder
+            opacity: .5
+
           &:focus
             outline: none
 
