add margin class

--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -40,7 +40,7 @@
 <div class="navigation-bar mobile">
     <div class="header">
         <a href="/search" class="icon search"></a>
-        <h5 class="title ml-2">
+        <h5 class="title">
             <a href="/">
                 {{ site.title }}
             </a>
