--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -57,6 +57,9 @@ body
   .mr-1
     margin-right: 1em!important
 
+  .ml-2
+    margin-left: 2em!important
+
   .ml-3
     margin-left: 3em!important
 
