--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -12,7 +12,7 @@
     color: var(--font-color--nav-link)
     font-size: 1.4em
     cursor: pointer
-    padding: .5em .8em
+    padding: .5em 1em
 
   section
     padding: 0 2em
