--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -78,6 +78,9 @@ body
   .text-left
     text-align: left
 
+  .text-center
+    text-align: center
+
   img.thumbnail
     width: 100%
     border-radius: 5px
