--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -15,69 +15,12 @@
         </div>
     </body>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+    <script type="text/javascript" src="/static/js/dddd.jekyll-search.js"></script>
     <script type="text/javascript">
-        (function($) {
-            $(function() {
-                const params = deparam()
-
-                $('#searchInput').val(params.q)
-                render(filterPost(params.q), params.q)
-            })
-
-            function filterPost (q) {
-                if (!q) {
-                    return []
-                }
-
-                return getAllPost().filter(p => {
-                    return p.categories.indexOf(q) > -1 || p.title.indexOf(q) > -1 || p.tags.indexOf(q) > -1 || p.content.indexOf(q) > -1
-                })
-            }
-
-            function render (posts, q) {
-                const html = _.template($('#template-post-list').text())({
-                    posts,
-                    q,
-                    formatDate: (date) => {
-                        return date.substring(0, date.indexOf(' ')).replace(/-/g, '.')
-                    }
-                })
-
-                $('#postSection').html(html)
-            }
-
-            function getAllPost () {
-                return [
-                    {% for post in site.posts %}
-                        {
-                            "title": "{{ post.title | xml_escape }}",
-                            "categories": [{% for category in post.categories %} "{{ category }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
-                            "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-                            "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
-                            "date": "{{ post.date }}",
-                            "url": "{{ post.url | xml_escape | relative_url }}"
-                        }
-                        {% unless forloop.last %},{% endunless %}
-                    {% endfor %}
-                ]
-            }
-
-            function deparam () {
-                const paramString = decodeURIComponent(location.href.substring(location.href.indexOf('?') + 1, location.href.length))
-
-                const paramPairs = paramString.split('&')
-                return paramPairs.reduce((acc, curr) => {
-                    const paramPair = curr.split('=')
-
-                    return {
-                        [paramPair[0]]: paramPair[1],
-                        ...acc
-                    }
-                }, {})
-            }
-        }(jQuery))
+        window.onload = () => {
+            new dddd.jekyll.Search()
+        }
     </script>
     <script id="template-post-list" type="text/template">
         <% if (_.size(posts) > 0) { %>
