--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -17,6 +17,7 @@
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
     <script type="text/javascript" src="/static/js/dddd.jekyll-search.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/mindcloud92/dddd.jekyll-search/main/src/static/js/dddd.jekyll-search.js"></script>
     <script type="text/javascript">
         window.onload = () => {
             new dddd.jekyll.Search()
