--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -16,11 +16,28 @@
     </body>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
-    <script type="text/javascript" src="/static/js/dddd.jekyll-search.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/mindcloud92/dddd.jekyll-search/main/src/static/js/dddd.jekyll-search.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.jekyll-search@0ab8dab9e32442808897bd0a203a951aeb36694c/src/static/js/dddd.jekyll-search.js"></script>
     <script type="text/javascript">
         window.onload = () => {
-            new dddd.jekyll.Search()
+            new dddd.jekyll.Search({
+                posts: getAllPost()
+            })
+        }
+
+        function getAllPost () {
+            return [
+                {% for post in site.posts %}
+                {
+                    "title": "{{ post.title | xml_escape }}",
+                    "categories": [{% for category in post.categories %} "{{ category }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
+                    "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+                    "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
+                    "date": "{{ post.date }}",
+                    "url": "{{ post.url | xml_escape | relative_url }}"
+                }
+                {% unless forloop.last %},{% endunless %}
+                {% endfor %}
+            ]
         }
     </script>
     <script id="template-post-list" type="text/template">
