--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -16,11 +16,15 @@
     </body>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.jekyll-search@7a193b48770fb22e78d0e994e9c21a19c73aaf6b/src/static/js/dddd.jekyll-search.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.jekyll-search@af0ec0f5a986666289dfc2b821ac57bce1f42a3a/src/static/js/dddd.jekyll-search.js"></script>
+    <script>
+
+    </script>
+
     <script type="text/javascript">
         window.onload = () => {
-            new dddd.jekyll.Search({
-                posts: getAllPost()
+            dddd.jekyll.Search.renderResult({
+                data: getAllPost()
             })
         }
 
@@ -41,13 +45,13 @@
         }
     </script>
     <script id="template-post-list" type="text/template">
-        <% if (_.size(posts) > 0) { %>
+        <% if (_.size(data) > 0) { %>
             <h5>
-                Total <b class="count"><%= _.size(posts) %></b>
+                Total <b class="count"><%= _.size(data) %></b>
             </h5>
 
             <ul class="post-container mt-2">
-                <% _.each(posts, (v, i) => { %>
+                <% _.each(data, (v, i) => { %>
                     <li>
                         <div>
                             <div class="additional-info-wrapper">
