tag container bug fix

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -66,9 +66,9 @@
                                 <p class="contents"><%= v.content %></p>
                             </a>
                         </div>
-                        <div class="mt-2 tag-container mb-2">
+                        <div class="mt-2  mb-2">
                             <% _.each(v.tags, (t, j) => { %>
-                                <p class="tag ma-0"># <%= t %> </p>
+                                <span class="tag ma-0"># <%= t %> </span>
                             <% }) %>
                         </div>
                     </li>
