add script style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -73,6 +73,22 @@
         font-family: var(--font-family--default)
 
 
+      .language-javascript
+        .nb, .na, .nb + .p + .nx,
+          color: #865E9B
+
+        .na
+          color: #ffbf00
+
+        .kd, .k
+          color: #ff8d38
+
+        .kd + .nx
+          color: #ffbf00
+
+        .dl, .dl + .s2
+          color: #709a59
+
 
     .stepper
       .title
