--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -16,10 +16,10 @@
     </body>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.jekyll-search@af0ec0f5a986666289dfc2b821ac57bce1f42a3a/src/static/js/dddd.jekyll-search.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.static-search@f542b5b31a23cda9ad481c1022799a56f96d1798/src/static/js/dddd.static-search.min.js"></script>
     <script type="text/javascript">
         window.onload = () => {
-            dddd.jekyll.Search.renderResult({
+            dddd.static.Search.renderResult({
                 data: getAllPost()
             })
         }
