change javascript style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -74,17 +74,20 @@
 
 
       .language-javascript
-        .nb, .na, .nb + .p + .nx,
-          color: #865E9B
+        .mi, .mf
+          color: #42c4ff
 
         .na
           color: #ffbf00
 
-        .kd, .k
-          color: #ff8d38
+        .nb, .na, .nb + .p + .nx
+          color: #865E9B
 
         .kd + .nx
           color: #ffbf00
+
+        .kd, .k
+          color: #ff8d38
 
         .dl, .dl + .s2
           color: #709a59
