--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -89,11 +89,8 @@
         .kd, .k
           color: #ff8d38
 
-        .dl, .dl + .s2
+        .dl, .dl + .s2, .cm, .c1
           color: #709a59
-
-        .cm
-          color: #429245
 
 
     .stepper
