--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -42,11 +42,8 @@
                                     {{ post.title }}
                                 </a>
                             </div>
-                            <div class="mt-3">
-                                {% for tag in post.tags %}
-                                <span class="tag"># {{ tag }} </span>
-                                {% endfor %}
-                            </div>
+
+                            {% include tag-container.html tags=post.tags class="mt-3" %}
                         </li>
                     {% endfor %}
                 </ul>
