--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -22,11 +22,8 @@
                                 {{ post.title }}
                             </a>
                         </div>
-                        <div class="mt-3">
-                            {% for tag in post.tags %}
-                                <span class="tag ma-0"># {{ tag }} </span>
-                            {% endfor %}
-                        </div>
+
+                        {% include tag-container.html tags=post.tags class="mt-3" %}
                     </li>
                     {% endfor %}
                 </ul>
