--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -10,6 +10,9 @@ body
     color: var(--font-color--default)
     text-decoration: none
 
+    &:hover
+      opacity: .8
+
   img
     max-width: 100%
 
