post javascript style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -62,6 +62,7 @@
 
         .cp, .nt
           color: #ffbf00
+
         .s
           color: #cddc39
 
@@ -74,23 +75,29 @@
 
 
       .language-javascript
-        .mi, .mf
+        .mi, .mf, .mi
           color: #42c4ff
-
-        .na
-          color: #ffbf00
-
-        .nb, .na, .nb + .p + .nx
-          color: #865E9B
-
-        .kd + .nx
-          color: #ffbf00
 
         .kd, .k
           color: #ff8d38
 
-        .dl, .dl + .s2, .cm, .c1
+        .kd + .nx
+          color: #ffc107
+
+        .p + .kd + .nx
+          color: #dadcf3
+
+        .cm, .c1
+          color: #8fbf74
+
+        .dl, .dl + .s1, .dl + .s2
           color: #709a59
+
+        .nb + .p + .nx
+          color: #ffc107
+
+        .p + .na
+          color: #9d78e0
 
 
     .stepper
