apply javascript style

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -93,7 +93,7 @@
         .dl, .dl + .s1, .dl + .s2
           color: #709a59
 
-        .nb + .p + .nx
+        .nb + .p + .nx, .dl + .p + .nx
           color: #ffc107
 
         .p + .na
