--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,13 +24,18 @@
     <link rel="shortcut icon" href="/static/images/favicon.ico">
 
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQ9TZ4W7KK"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    {% if jekyll.environment == "production" %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?{{ site.ga-stream-id }}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
 
-        gtag('config', 'G-JQ9TZ4W7KK');
-    </script>
+            gtag('js', new Date());
+            gtag('config', '{{ site.ga-stream-id }}');
+
+            function gtag(){
+                dataLayer.push(arguments);
+            }
+        </script>
+    {% endif %}
 </head>
