--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -78,6 +78,12 @@ body
   .pb-3
     padding-bottom: 3em!important
 
+  .d-flex
+    display: flex
+
+  .justify-center
+    justify-content: center
+
   .text-left
     text-align: left
 
