--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -180,6 +180,9 @@
         text-align: right
         padding-right: .5em
         margin: 0
+        font-weight: bold
+        font-size: .95em
+        opacity: .8
 
       .rating-container
         display: flex
