apply category class

--- a/_includes/category-link.html
+++ b/_includes/category-link.html
@@ -1,3 +1,5 @@
-<a href="{{ include.categories | first | downcase | relative_url }}" class="{{include.class}}">
-    {{ include.categories | first | upcase }}
+{% assign category = include.categories | first %}
+
+<a href="{{ category | downcase | relative_url }}" class="{{include.class}} {{ site.category-color-class[category] }}">
+    {{ category | upcase }}
 </a>
