--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -27,14 +27,16 @@
         function getAllPost () {
             return [
                 {% for post in site.posts %}
-                {
-                    "title": "{{ post.title | xml_escape }}",
-                    "categories": [{% for category in post.categories %} "{{ category }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
-                    "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-                    "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
-                    "date": "{{ post.date }}",
-                    "url": "{{ post.url | xml_escape | relative_url }}"
-                }
+                    {% assign firstCategory = post.categories | first %}
+                    {
+                        "title": "{{ post.title | xml_escape }}",
+                        "categories": [{% for category in post.categories %} "{{ category }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
+                        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+                        "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
+                        "date": "{{ post.date }}",
+                        "url": "{{ post.url | xml_escape | relative_url }}",
+                        "categoryColorClass": "{{ site.category-color-class[firstCategory] }}"
+                    }
                 {% unless forloop.last %},{% endunless %}
                 {% endfor %}
             ]
@@ -52,7 +54,7 @@
                         <div>
                             <div class="additional-info-wrapper">
                                 <% const category = v.categories[0].toUpperCase() %>
-                                <a href="/<%= category %>" class="category ma-0">
+                                <a href="/<%= category %>" class="category ma-0 <%= v.categoryColorClass %>">
                                     <%= category %>
                                 </a>
                                 <i class="divider"></i>
