--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -11,10 +11,16 @@
     padding: .1em 1em
     background: var(--key-color--default)
 
+    &.brown
+      background: var(--color-brown)
+
   .category
     color: var(--key-color--default)
     font-size: .75em
     font-weight: 600
+
+    &.brown
+      color: var(--color-brown)
 
   .tag
     font-size: .88em
