--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -73,6 +73,21 @@
         font-size: .85em
         font-family: var(--font-family--default)
 
+      .language-java
+        .c1
+          color: #8fbf74
+
+        .kd, .k, .kt
+          color: #ff8d38
+
+        .nf
+          color: #ffc107
+
+        .mi, .mf, .mi
+          color: #42c4ff
+
+        .s
+          color: #709a59
 
       .language-javascript
         .mi, .mf, .mi
