--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -91,7 +91,7 @@
           content: 'JAVA'
           background: #3b7bbe
 
-        .c1
+        .c1, .cm
           color: #8fbf74
 
         .kd, .k, .kt
