--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -103,7 +103,7 @@
         .mi, .mf, .mi
           color: #42c4ff
 
-        .s
+        .s, .sc
           color: #709a59
 
       .language-javascript
