--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -94,6 +94,7 @@ body
     width: 100%
     border-radius: 5px
     border: 1px solid var(--border-color--thumbnail)
+    object-fit: contain
 
   .icon
     font-style: normal
