--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -24,6 +24,10 @@ body
     overflow: scroll
     padding: var(--padding--contents-wrapper-y) var(--padding--contents-wrapper-x)
 
+    .count
+      color: var(--font-color--post-count)
+      font-size: .75em
+
   .section-title
     color: var(--font-color--section-title)
 
