--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -7,12 +7,13 @@
         <div class="contents-wrapper">
             {% assign currentCategoryName = page.url | replace: '.html', '' | replace: '/', '' | downcase %}
             <section>
+                {% assign categorizedPosts = site.posts | where_exp: "post", "post.categories contains currentCategoryName" %}
                 <h2 class="section-title">
                     {{ currentCategoryName | upcase }}
+                    <span class="count">{{ categorizedPosts.size }}</span>
                 </h2>
 
                 <ul class="post-container text">
-                    {% assign categorizedPosts = site.posts | where_exp: "post", "post.categories contains currentCategoryName" %}
                     {% for post in categorizedPosts %}
                         <li>
                             <div>
