--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -33,7 +33,7 @@
                         "categories": [{% for category in post.categories %} "{{ category }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
                         "content": {{ post.content | strip_html | strip_newlines | jsonify }},
                         "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
-                        "date": "{{ post.date }}",
+                        "date": "{{ post.date | date: '%FT%TZ' }}",
                         "url": "{{ post.url | xml_escape | relative_url }}",
                         "categoryColorClass": "{{ site.category-color-class[firstCategory] }}"
                     }
@@ -59,7 +59,7 @@
                                 </a>
                                 <i class="divider"></i>
                                 <p class="date ma-0">
-                                    <%= formatDate(v.date) %>
+                                    <%= formatDate(v.date) %> <%= v.date %>
                                 </p>
                             </div>
                             <a href=<%= v.url %>>
