change post date format

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -59,7 +59,7 @@
                                 </a>
                                 <i class="divider"></i>
                                 <p class="date ma-0">
-                                    <%= formatDate(v.date) %> <%= v.date %>
+                                    <%= formatDate(v.date) %>
                                 </p>
                             </div>
                             <a href=<%= v.url %>>
