--- a/static/css/partial/_search.sass
+++ b/static/css/partial/_search.sass
@@ -8,14 +8,14 @@
         padding: 0
         display: flex
         width: 50%
+        border: 1px solid #dedede
+        border-radius: 5px
 
         [type=text]
-          border: 1px solid #dedede
           padding: .8em 1.2em
           padding-right: 0
           font-size: 1.1em
-          border-radius: 5px 0 0 5px
-          border-right: none
+          border: none
           width: 100%
 
           &::placeholder
@@ -27,9 +27,7 @@
         .search
           font-size: 1.1em
           padding: .8em 1em
-          border: 1px solid #dedede
-          border-width: 1px 1px 1px 0
-          border-radius: 0 5px 5px 0
+          border: none
           background: transparent
           cursor: pointer
 
