change search input style

--- a/static/css/partial/_search.sass
+++ b/static/css/partial/_search.sass
@@ -15,6 +15,7 @@
           padding: .8em 1.2em
           padding-right: 0
           font-size: 1.1em
+          border-radius: inherit
           border: none
           width: 100%
 
@@ -28,6 +29,7 @@
           font-size: 1.1em
           padding: .8em 1em
           border: none
+          border-radius: inherit
           background: transparent
           cursor: pointer
 
