--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -67,7 +67,7 @@
                                 <p class="contents"><%= v.content %></p>
                             </a>
                         </div>
-                        <div class="mt-2  mb-2">
+                        <div class="mt-2  mb-2 tag-container">
                             <% _.each(v.tags, (t, j) => { %>
                                 <a href="/search?q=<%= t %>" class="tag"># <%= t %></a>
                             <% }) %>
