--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -22,10 +22,12 @@
     &.brown
       color: var(--color-brown)
 
+  .tag-container
+    .tag
+      float: left
+
   .tag
     font-size: .88em
     color: var(--font-color--post-tag)
-    padding-left: .8em
+    padding-inline-end: .8em
 
-    &:first-child
-      padding-left: 0
