--- a/_includes/tag-container.html
+++ b/_includes/tag-container.html
@@ -1,4 +1,4 @@
-<div class="{{ include.class }}">
+<div class="{{ include.class }} tag-container">
     {% for tag in include.tags %}
         <a href="/search?q={{tag}}" class="tag"># {{ tag }}</a>
     {% endfor %}
