--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,7 @@
                     Latest Posts
                 </h2>
                 <ul class="post-container thumbnail">
-                    {% for post in site.posts limit: 3 %}
+                    {% for post in site.posts limit: 6 %}
                         <li>
                             <a href="{{ post.url }}" class="thumbnail-wrapper">
                                 <img src="{{ post.thumbnail | relative_url }}" class="thumbnail" onerror="this.src='https://miro.medium.com/max/1400/1*KOAfAOQ9FwAp9i2muTkGWw.png'" />
@@ -29,25 +29,42 @@
                 </ul>
             </section>
 
-            <section class="mt-3">
-                <h2 class="section-title">Populary Posts</h2>
+            <section class="mt-3 tag-section">
+                <h2 class="section-title">Tags</h2>
 
-                <ul class="post-container text">
-                    {% for post in site.posts limit: 8 %}
-                        <li>
-                            <div>
-                                {% include category-link.html categories=post.categories class="category-badge ma-0 mb-1" %}
+                <div class="tag-container">
+                    {%  for tag in site.tags %}
+                        {% capture tag_name %}{{ tag | first }}{% endcapture %}
+                        {% capture tag_size %}{{ tag | last | size }}{% endcapture %}
+                        {% capture font_size %}{{ tag_size | times: site.tags.size | divided_by : site.tags.size | plus: 14 }}{% endcapture %}
 
-                                <a href="{{ post.url }}" class="title">
-                                    {{ post.title }}
-                                </a>
-                            </div>
-
-                            {% include tag-container.html tags=post.tags class="mt-3" %}
-                        </li>
+                        <a href="/search?q={{ tag_name }}" class="tag" data-count="{{ tag_size }}">
+                            {{ tag_name }}
+                        </a>
                     {% endfor %}
-                </ul>
+                </div>
             </section>
         </div>
     </body>
+    <style>
+        .a {
+        }
+
+
+        .a li {
+            margin-inline-end: 1em;
+            float: left;
+            margin-block-end: 1em;
+        }
+
+        .a:before,
+        .a:after {
+            content: "";
+            display: table;
+        }
+
+        .a:after {
+            clear: both;
+        }
+    </style>
 </html>
