--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -122,6 +122,16 @@ body
       &:before
         content: '\f002'
 
+  .tag-container
+    &:before
+      content: ''
+      display: table
+
+    &:after
+      display: table
+      content: ''
+      clear: both
+
 @media screen and (max-width: 768px)
   body
     &.container
