--- a/static/css/partial/_blue-theme--variable.sass
+++ b/static/css/partial/_blue-theme--variable.sass
@@ -8,6 +8,7 @@ body.blue-theme
   --background-color--file: #1f1f1f
   --background-color--blockquote: #fcfcfc
   --background-color--stepper-title: #6a7990
+  --background-color--emphasis-tag: #e6f4f1a3
 
   --font-color--default: #4e5665
   --font-color--nav-title: #fff
@@ -15,6 +16,7 @@ body.blue-theme
   --font-color--nav-link: #fffaf5bd
   --font-color--section-title: #343840
   --font-color--post-content: #3F4756
+  --font-color--emphasis-tag-count: #0094FA
 
   --font-color--post-date: #8f99b1
   --font-color--post-tag: #7f848e
