--- a/static/css/partial/_default-theme--variable.sass
+++ b/static/css/partial/_default-theme--variable.sass
@@ -8,6 +8,7 @@ body
   --background-color--file: #1f1f1f
   --background-color--blockquote: #fcfcfc
   --background-color--stepper-title: #4B4A54
+  --background-color--emphasis-tag: #e0e2eca8
 
   --font-color--default: #000
   --font-color--nav-title: #fff
@@ -15,6 +16,7 @@ body
   --font-color--nav-link: #fffaf5bd
   --font-color--section-title: #3a4048
   --font-color--post-content: #4B4A54
+  --font-color--emphasis-tag-count: #ad3ab5
 
   --font-color--post-date: #8e8e8e
   --font-color--post-tag: #8593a2
