--- a/static/css/partial/_pink-theme--variable.sass
+++ b/static/css/partial/_pink-theme--variable.sass
@@ -8,6 +8,7 @@ body.pink-theme
   --background-color--file: #1f1f1f
   --background-color--blockquote: #fcfcfc
   --background-color--stepper-title: #d4a985
+  --background-color--emphasis-tag: #f3eed975
 
   --font-color--default: #384144
   --font-color--nav-title: #fff
@@ -15,6 +16,7 @@ body.pink-theme
   --font-color--nav-link: #fffaf5bd
   --font-color--section-title: #485458
   --font-color--post-content: #485458
+  --font-color--emphasis-tag-count: #9E0022
 
   --font-color--post-date: #8a9296
   --font-color--post-tag: #717679
