--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -19,7 +19,7 @@
             padding: .4em 1.2em
             border: 1px solid #fefefe
             border-radius: 15px
-            background: #f3eed975
+            background: var(--background-color--emphasis-tag)
             font-size: .9em
 
 
@@ -30,7 +30,7 @@
               position: absolute
               font-size: .7em
               font-weight: bold
-              color: #9E0022
+              color: var(--font-color--emphasis-tag-count)
 
       .post-container
         position: relative
