--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -5,16 +5,15 @@
         {% include navigation-bar.html %}
 
         <div class="contents-wrapper">
-            {% assign currentCategoryName = page.url | replace: '.html', '' | replace: '/', '' | downcase %}
             <section>
-                {% assign categorizedPosts = site.posts | where_exp: "post", "post.categories contains currentCategoryName" %}
+                {% assign currentCategory = page.pagination.category %}
                 <h2 class="section-title">
-                    {{ currentCategoryName | upcase }}
-                    <span class="count">{{ categorizedPosts.size }}</span>
+                    {{ currentCategory | upcase }}
+                    <span class="count">{{ paginator.total_posts }}</span>
                 </h2>
 
                 <ul class="post-container text">
-                    {% for post in categorizedPosts %}
+                    {% for post in paginator.posts %}
                         <li>
                             <div>
                                 <div class="additional-info-wrapper">
@@ -28,8 +27,73 @@
                             {% include tag-container.html tags=post.tags class="mt-3" %}
                         </li>
                     {% endfor %}
+
+                    {% assign emptySpaceCount = paginator.posts.size() | modulo: 4 | minus: 4 | abs %}
+                    {% if emptySpaceCount < 4 %}
+                        {% for emptySpaceCount in (1..emptySpaceCount) %}
+                            <li class="default-item"></li>
+                        {% endfor %}
+                    {% endif %}
                 </ul>
+
+                {% if paginator.total_pages > 1 %}
+                    <div class="mt-2 paginator mb-1">
+
+                        {% if paginator.previous_page %}
+                            <a href="{{ paginator.previous_page_path | relative_url }}" class="page-link previous">
+                                <i class="fas fa-angle-left"></i>
+                            </a>
+                        {% endif %}
+
+
+                        {% for page in (1..paginator.total_pages) %}
+                            {% if page == paginator.page %}
+                                <span class="current page-link">
+                                    {{ page }}
+                                </span>
+                            {% elsif page == 1 %}
+                                <a href="{{ '/' | prepend: currentCategory | relative_url }}"  class="page-link">
+                                    {{ page }}
+                                </a>
+                            {% else %}
+                                <a href="{{ '/' | prepend: page | prepend: '/' | prepend: currentCategory | relative_url }}" class="page-link">
+                                    {{ page }}
+                                </a>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if paginator.next_page %}
+                            <a href="{{ paginator.next_page_path | relative_url }}" class="page-link next">
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        {% endif %}
+                    </div>
+                {% endif %}
             </section>
         </div>
+        <style>
+            .paginator {
+                display: flex;
+                justify-content: center;
+                /*align-items: center;*/
+            }
+
+            .page-link {
+                margin: 0 .5em;
+                padding: 0;
+                opacity: .7;
+                vertical-align: middle;
+            }
+
+            .page-link.current {
+                opacity: 1;
+                font-weight: bold;
+            }
+
+            .page-link.next, .page-link.previous {
+            }
+
+
+        </style>
     </body>
 </html>
