--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -91,6 +91,11 @@
     &.main, &.post-list
       section
         .post-container
+          li
+            margin-bottom: 2em
+            &:last-child
+              margin-bottom: 0
+
           &.thumbnail
             display: block
 
@@ -101,10 +106,7 @@
             li
               width: 100%
               padding: 0
-              margin-bottom: 2em
 
-              &:last-child
-                margin-bottom: 0
 
           &.text
             display: block
